standalone mode appears to be working well. added cooldown and overall fan speed logic.

--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-if Run State = Stopping - Post Run Glow Re-heat OR Cooldown
-    ->heater power switch has to be off
+add a bme280 for automatic altitude
